[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "hatch-regex-commit"
description = "Hatch plugin to create a commit and tag when bumping version"
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "François Voron", email = "fvoron@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
  "Framework :: Hatch",
]
dependencies = [
  "hatchling"
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/frankie567/hatch-regex-commit#readme"
Issues = "https://github.com/frankie567/hatch-regex-commit/issues"
Source = "https://github.com/frankie567/hatch-regex-commit"

[project.entry-points.hatch]
regex-commit = "hatch_regex_commit.hooks"

[tool.hatch.version]
source = "regex_commit"
path = "hatch_regex_commit/__about__.py"
commit_extra_args = ["-e"]

[tool.hatch.envs.default]
dependencies = [
  "black",
  "isort",
  "mypy",
  "pytest",
  "pytest-cov",
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=hatch_regex_commit --cov=tests"
no-cov = "cov --no-cov"
lint = [
  "isort ./hatch_regex_commit",
  "isort ./tests",
  "black .",
  "mypy hatch_regex_commit/",
]
lint-check = [
  "isort --check-only ./hatch_regex_commit ./tests",
  "black --check .",
  "mypy hatch_regex_commit/",
]

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310", "311"]

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "hatch_regex_commit/__about__.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.isort]
profile = "black"
